; ModuleID = '/home/carl/AnghaBench/reactos/drivers/bus/acpi/busmgr/extr_system.c_acpi_system_suspend.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/bus/acpi/busmgr/extr_system.c_acpi_system_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AE_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_system_suspend(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @AE_ERROR, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %2, align 4
  switch i32 %5, label %10 [
    i32 130, label %6
    i32 128, label %6
    i32 129, label %9
  ]

6:                                                ; preds = %1, %1
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @AcpiEnterSleepState(i32 %7)
  store i32 %8, i32* %3, align 4
  br label %10

9:                                                ; preds = %1
  br label %10

10:                                               ; preds = %1, %9, %6
  %11 = load i32, i32* %3, align 4
  ret i32 %11
}

declare dso_local i32 @AcpiEnterSleepState(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
